<resources>
    <string name="app_name">TextView</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">rladlsqja30@naver.com</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">settings</string>
    <string name="action_delete">삭제</string>

    <string name="menu_recentlist">최근목록</string>
    <string name="menu_bookshelf">내서가</string>
    <string name="menu_file">내파일</string>
    <string name="menu_Internet_library">인터넷도서관</string>
    <string name="menu_bookmark">책갈피</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="admob_app_id">ca-app-pub-2672586492222031~7714903919</string>

    <string name="banner_ad_unit_id">ca-app-pub-2672586492222031/5635766333</string>
    <string name="wr_ad_unit_id_for">ca-app-pub-2672586492222031/8101576757</string>



    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="wr_ad_unit_id_for_test">ca-app-pub-3940256099942544/8691691433</string>
</resources>

    <!--

    <string name="menu_home">Home</string>
    <string name="menu_g">G</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

-->