<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Recentlist"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_recentlist"/>


    </group>


            <item
                android:id="@+id/nav_bookshelf"
                android:icon="@drawable/ic_menu_bookshelf"
                android:title="@string/menu_bookshelf" />
            <item
                android:id="@+id/nav_file"
                android:icon="@drawable/ic_menu_file"
                android:title="@string/menu_file" />
            <item
                android:id="@+id/nav_Internet_library"
                android:icon="@drawable/ic_menu_internet_library"
                android:title="@string/menu_Internet_library" />
            <item
                android:id="@+id/nav_bookmark"
                android:icon="@drawable/ic_menu_bookmark"
                android:title="@string/menu_bookmark" />




</menu>
