<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Recentlist"><!---->

    <fragment
        android:id="@+id/nav_Recentlist"
        android:name="com.textview.txt.ui.home.RecentlistFragment"
        android:label="@string/menu_recentlist"
        tools:layout="@layout/fragment_recentlist" />

    <fragment
        android:id="@+id/nav_bookshelf"
        android:name="com.textview.txt.ui.gallery.bookshelfFragment"
        android:label="@string/menu_bookshelf"
        tools:layout="@layout/fragment_bookshelf" />

    <fragment
        android:id="@+id/nav_file"
        android:name="com.textview.txt.ui.slideshow.fileFragment"
        android:label="@string/menu_file"
        tools:layout="@layout/fragment_file" />

    <fragment
        android:id="@+id/nav_Internet_library"
        android:name="com.textview.txt.ui.share.InternetlibraryFragment"
        android:label="@string/menu_Internet_library"
        tools:layout="@layout/fragment_internetlibrary" />

    <fragment
        android:id="@+id/nav_bookmark"
        android:name="com.textview.txt.ui.send.bookmarkFragment"
        android:label="@string/menu_bookmark"
        tools:layout="@layout/fragment_bookmark" />
</navigation>